assets/style.css
body {
  font-family: Roboto Mono, sans-serif;
}

h1 {
  text-align: center;
}

h2 {
  font-size: 300px;
  text-align: center;
  margin: 0;
}

.log-in {
  border-radius: 20px;
  width: 100px;
  height: 50px;
}

.dark-theme {
  background-color: black;
  color: white;
  box-shadow: 0 4px 8px 0 #ff04b4(0, 0, 0, 0.2);
}

.punk-container {
  display: flex;
  flex-wrap: wrap;
}

/* box shadow and card css attributed to https://www.w3schools.com/howto/howto_css_cards.asp */
.punk-card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  border-radius: 10px;
  border-top: 20px;
  width: 375px;
  text-align: center;
  padding-top: 10px;
  padding-bottom: 10px;
  margin-top: 20px;
  margin-bottom: 20px;

  /* display: none; */
}
.punk-card-dark-theme {
  box-shadow: 10px 10px 10px 10px rgba(100, 100, 100, 130);
  transition: 0.3s;
  border-radius: 10px;
  border-top: 20px;
  width: 375px;
  text-align: center;
  padding-top: 10px;
  padding-bottom: 10px;
  margin-top: 20px;
  margin-bottom: 20px;
}

.punk-card-dark-theme:hover {
  box-shadow: 20px 20px 30px 10px rgba(100, 100, 100, 130);
}

.punk-card:hover {
  box-shadow: 20px 20px 30px 10px rgba(0, 0, 0, 0.3);
}

img {
  border-radius: 10px 10px 10px 10px;
}

.likes {
  text-align: right;
  margin-right: 30px;
}

#likes {
  font-size: 25px;
  color: red;
}

#likes:hover {
  box-shadow: 20px 20px 30px 10px #ff04b4;
}

/* flip card attributed to https://www.w3schools.com/howto/howto_css_flip_card.asp */
.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 1.2s;
  transform-style: preserve-3d;
}

/* .flip-card:hover .flip-card-inner {
   
    transform: rotateY(180deg);
  } */

.flip-card-front,
.flip-card-back {
  position: relative;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden; /* Safari */
  backface-visibility: hidden;
}

/* .flip-card-front {
   
   
  } */

.flip-card-back {
  background-color: dodgerblue;
  color: white;
  transform: rotateY(180deg);
  justify-content: center;
  align-items: center;
}

#add-comment {
  border-radius: 20%;
  height: 40px;
  margin-bottom: 10px;
}

.wipe-out {
  display: none;
}

.show {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  border-radius: 10px;
  border-top: 20px;
  width: 75%;
  height: 75%;
  position: relative;
  justify-content: center;
  text-align: center;
  padding-top: 10px;
  padding-bottom: 10px;
  margin-top: 20px;
  margin-bottom: 20px;
  margin: auto;
}

.show:hover {
  box-shadow: 20px 20px 30px 10px rgba(0, 0, 0, 0.3);
}

/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0, 0, 0); /* Fallback color */
  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content {
  background-color: #fefefe;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 20px 20px 100px 20px;
  border: 1px solid #888;
  width: 80%;
  font-size: 20px;;
   /* Could be more or less, depending on screen size */
}

/* The Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.dark-theme {
  background-color: black;
  color: white;
}

marquee {
  font-size: 40px;
  background-color: #ff04b4;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #333;
  position: -webkit-sticky; /* Safari */
  position: sticky;
  top: 0;
}

li {
  float: left;
}

li a {
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

li a:hover {
  /* background-color: #111; */
  box-shadow: 20px 20px 30px 10px rgba(243, 238, 238, 0.3);
}

.active {
  background-color: #ff04b4;
}

.small-punk {
  height: 30px;
  width: 30px;
  display: flex;
  flex-wrap: wrap;
}

.container {
  background-color: cornflowerblue;
  font-size: 30px;
}

button,
input.log-in {
  border-radius: 10px;
  height: 50px;
  font-size: 20px;
  font-family: Roboto Mono, sans-serif;
}

button:hover {
  box-shadow: 20px 20px 30px 10px #ff04b4;
}

input {
  border-radius: 10px;
  height: 50px;
  width: 300px;
  font-size: 30px;
  font-family: Roboto Mono, sans-serif;
}

